--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
-    "lodash": "^4.17.15",
+    "loadsh": "0.0.4",
+    "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
