--- a/client/package.json
+++ b/client/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
+    "flv.js": "^1.5.0",
     "loadsh": "0.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
